--- a/ext/README
+++ b/ext/README
@@ -1,3 +1,4 @@
+HtmlAgilityPack.dll     1.4.0
 Moq.dll                 4.0.10827 (NET35)
 Ninject.dll             2.2.0.0-release-net-3.5-no-web
 Retlang.dll             r426 NET35
