divest ourselves from ninject in favor of funq

--- a/ext/README
+++ b/ext/README
@@ -1,6 +1,7 @@
+Funq.dll                1.0 Funq\NET35\Funq.dll
 HtmlAgilityPack.dll     1.4.0
 Moq.dll                 4.0.10827 (NET35)
 Ninject.dll             2.2.0.0-release-net-3.5-no-web
 Retlang.dll             r426 NET35
-nunit.framework.dll     2.5.10.11092
 libIntegration.dylib    src/Tepeyac.Mac/Integration
+nunit.framework.dll     2.5.10.11092
